# doom_rl

./: .gitignore  CMakeLists.txt  README.md
_not_in_use/: DoomRLNetVersion.cpp  DoomRLNetVersion.hpp
app/: CMakeLists.txt  ConvNetwork.cpp  ConvNetwork.hpp  ConvUtils.hpp  CosAnnealLRScheduler.cpp  CosAnnealLRScheduler.hpp  DoomEnv.cpp  DoomEnv.hpp  DoomEnvironment.cpp  DoomEnvironment.hpp  DoomGuy.cpp  DoomGuy.hpp  DoomGuyNet.cpp  DoomGuyNet.hpp  DoomRLCmdOpts.cpp  DoomRLCmdOpts.hpp  DoomRLLogger.cpp  DoomRLLogger.hpp  DoomRewardVariable.hpp  QNetworkLSTM.cpp  QNetworkLSTM.hpp  RNG.cpp  RNG.hpp  ReplayMemory.hpp  debug_doom_rl.hpp  doom_rl.cpp  mlpack_test.cpp  test.cpp  torch_test.cpp  vizdoom_test.cpp
app/lr_schedulers/: CMakeLists.txt  ConstantLRScheduler.hpp  CosAnnealLRScheduler.cpp  CosAnnealLRScheduler.hpp  LearningRateScheduler.hpp
app/modules/: CMakeLists.txt  ConvNetwork.hpp  ConvUtils.hpp  QNetworkLSTM.hpp  ResidualBlocks.hpp  ResidualNetwork.hpp  TimeDistributed.hpp
app/utils/: CMakeLists.txt  RNG.hpp  SingletonT.hpp  StringUtils.hpp  TensorUtils.hpp
tests/: CMakeLists.txt  replay_memory_tests.cpp
viewer/: _vizdoom.ini  diff_networks.py  environment.yml  labels_buffer.py  plot_doomguy_csv.py  tensor_viewer.py  visualize_doomguy.py
viewer/testbed/classifier/: _vizdoom.ini  classifier_main.py  doom_classifier.py
viewer/testbed/doom_dreamer/: _vizdoom.ini  config.py  diagonal_gaussian_distribution.py  doom_agent_thread.py  doom_env.py  doom_evaluator.py  doom_models.py  doom_reward_vars.py  doom_rssm.py  doom_trainer.py  dreamer_test.py  nan_hook.py  replay_memory.py  sd_encode_decode.py  sd_reconstruction_loss.py  util.py
viewer/testbed/doom_dreamer/_vizdoom/doom.wad/: E1M2.gzc
viewer/testbed/doom_ppo/: __init__.py  _vizdoom.ini  automap_test.py  doom_agent.py  doom_env.py  doom_general_env_config.py  doom_gym_wrappers.py  doom_ppo.py  doom_ppo_rnd.py  doom_reward_vars.py  doom_vanilla_ppo.py  env_vec.py  net_init.py  sd_conv.py
viewer/testbed/doom_ppo/_archive/: doom_agent.py  doom_ppo_old.py
viewer/testbed/doom_ppo/vizdoomgym/: __init__.py
viewer/testbed/doom_ppo/vizdoomgym/envs/: __init__.py  vizdoom_env_definitions.py  vizdoomenv.py
viewer/testbed/ppo_vae/: _vizdoom.ini  vae.py  vae_trainer.py
viewer/testbed/vae/: _vizdoom.ini  config.py  conv_encode_decode.py  doom_agent_main_window.py  doom_agent_thread.py  doom_env.py  doom_models.py  doom_rssm.py  doom_trainer.py  doom_vae.py  dreamer_vae.py  replay_memory.py  sd_encode_decode.py  sd_loss.py  sd_test.py  sd_vae.py  vae_gui.py  vae_main.py
viewer/testbed/vae/_old/: conv_encode_decode.py  doom_vae.py
viewer/testbed/vae/config/: sd_vae_config.yaml
